[Blacklist] Fix blacklisted thumbnails on mobile in pool index

--- a/app/javascript/src/styles/common/blacklists.scss
+++ b/app/javascript/src/styles/common/blacklists.scss
@@ -230,5 +230,5 @@ article.thumbnail.blacklisted {
     background-size: cover;
     background-position: center;
   }
-  img { display: none; }
+  img { visibility: hidden; }
 }
